--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="row">
       <!-- Hamburger Button -->
       <div class="col-1">
-        <button class="hamburger-btn" type="button" onclick="toggleSidebar()">
+        <button class="hamburger-btn" type="button" id="toggleButton">
           <span></span>
           <span></span>
           <span></span>
