--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Graphic Section -->
     <div class="row justify-content-center my-4">
       <div class="text-center">
-        <img id="image" src="Cows.jpeg" class="rounded" alt="Image">
+        <img id="image" src="Cows.jpeg" class="rounded" alt="Animal Image">
       </div>
     </div>
 
@@ -54,7 +54,7 @@
     <div class="row justify-content-center mb-4">
       <div class="col-8">
         <div class="d-flex justify-content-center">
-          <img src="Cows.jpeg" class="rounded" alt="Graphic 1">
+          <img src="Cows.jpeg" class="rounded me-2" alt="Graphic 1">
           <img src="sheep.jpeg" class="rounded" alt="Graphic 2">
         </div>
       </div>
@@ -68,7 +68,7 @@
           <li data-description="Assist veterinarians in providing medical care to animals">Veterinary Technician</li>
           <li data-description="Conduct research to improve agricultural animal products">Livestock Research Specialist</li>
         </ul>
-        <div class="job-description" style="display:none; color: #0a9396; margin-top: 20px;"></div>
+        <div class="job-description" style="display:none;"></div>
       </div>
     </div>
 
